smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/namespace-defined-twice.smithy
// Parse error at line 4, column 1 near `namespace`: Only a single namespace can be declared per/file. The previous namespace was set to `com.foo`.
$version: "0.5.0"
namespace com.foo
namespace com.baz
